--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# нужен для скрытия файлов и папок от системы контроля версий Git. Обычно скрывают конфигурационные файлы (особенно с паролями), временные файли и папки
 # Cruft
 *~
 *#
