Init firebase hosting and configure build

--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,9 @@ yarn-debug.log*
 yarn-error.log*
 yarn.lock*
 package-lock.json
-/build/bundle.js
-/build/index.html
-/build*
-/build/*
+/public
 # Editor/IDE
 .idea
 packages/api/etc/
+# Hosting
+.firebase
